[gd_scene load_steps=6 format=3 uid="uid://cvx4rd1l3c1t7"]

[ext_resource type="Script" path="res://Units/Temp_Soldier/temp_soldier.gd" id="1_avd04"]
[ext_resource type="Texture2D" uid="uid://tn6eguwflw2x" path="res://Assets/Unit_-_Test.png" id="2_pd56w"]
[ext_resource type="Script" path="res://Units/health_component.gd" id="3_2f5wq"]
[ext_resource type="Script" path="res://Units/movement_component.gd" id="4_8t2nk"]
[ext_resource type="Script" path="res://Units/attack_component.gd" id="5_vfvtf"]

[node name="Temp_Archer" type="Node2D"]
script = ExtResource("1_avd04")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_pd56w")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_2f5wq")
unit_health = 2.0

[node name="MovementComponent" type="Node2D" parent="." node_paths=PackedStringArray("check_target_timer")]
script = ExtResource("4_8t2nk")
speed = 35.0
unit_allegience = 2
unit_target_faction = 2
unit_targeting = 0
check_target_timer = NodePath("CheckTargetTimer")

[node name="CheckTargetTimer" type="Timer" parent="MovementComponent"]
wait_time = 0.5

[node name="AttackComponent" type="Node2D" parent="." node_paths=PackedStringArray("attack_speed_timer")]
script = ExtResource("5_vfvtf")
attack_damage = 4.0
attack_range = 69.0
attack_speed = 2.0
attack_speed_timer = NodePath("AttackSpeedTimer")

[node name="AttackSpeedTimer" type="Timer" parent="AttackComponent"]
wait_time = 0.5

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 7.0
color = Color(0.269714, 0.550716, 0.553918, 1)

[connection signal="unit_has_died" from="HealthComponent" to="." method="_on_health_component_unit_has_died"]
[connection signal="new_target_found" from="MovementComponent" to="." method="_on_movement_component_new_target_found"]
[connection signal="timeout" from="MovementComponent/CheckTargetTimer" to="MovementComponent" method="_on_timer_timeout"]
[connection signal="is_within_attack_range_changed" from="AttackComponent" to="." method="_on_attack_component_is_within_attack_range_changed"]
[connection signal="timeout" from="AttackComponent/AttackSpeedTimer" to="AttackComponent" method="_on_attack_speed_timer_timeout"]
